[package]
name = "image_editor_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
bevy = "0.9.1"
bevy_prototype_debug_lines = "0.9.0"
bevy-inspector-egui = "0.14.0"
image = "0.24.3"
image_hl = {path = "../image_hl"}